Allow \max in levels