@@ -666,7 +666,7 @@ public class CompareVisitor implements ExpressionVisitor2<Expression, Expression
     if (otherExpr.getStuckInferenceVariable() != null) {
       ok = false;
     } else {
-      Expression arg = atExpr.getDefCallArguments().get(0).normalize(NormalizationMode.WHNF);
+      Expression arg = atExpr.getDefCallArguments().getFirst().normalize(NormalizationMode.WHNF);
       if (!(arg instanceof ArrayExpression arrayExpr)) {
         ok = correctOrder ? visitDefCall(atExpr, otherExpr) : otherExpr instanceof FunCallExpression && ((FunCallExpression) otherExpr).getDefinition() == Prelude.ARRAY_INDEX ? visitDefCall((FunCallExpression) otherExpr, atExpr) : otherExpr.accept(this, atExpr, type);
       } else {
@@ -905,12 +905,12 @@ public class CompareVisitor implements ExpressionVisitor2<Expression, Expression
         if (myNormalCompare) {
           if (dataCall2 != null && dataCall2.getDefinition() == Prelude.FIN && expr1.getDefinition() == Prelude.FIN) {
             int sucs = 0;
-            Expression arg1 = expr1.getDefCallArguments().get(0).normalize(NormalizationMode.WHNF);
-            Expression arg2 = dataCall2.getDefCallArguments().get(0).normalize(NormalizationMode.WHNF);
+            Expression arg1 = expr1.getDefCallArguments().getFirst().normalize(NormalizationMode.WHNF);
+            Expression arg2 = dataCall2.getDefCallArguments().getFirst().normalize(NormalizationMode.WHNF);
             while (arg1 instanceof ConCallExpression conCall1 && conCall1.getDefinition() == Prelude.SUC && arg2 instanceof ConCallExpression conCall2 && conCall2.getDefinition() == Prelude.SUC) {
               sucs++;
-              arg1 = conCall1.getDefCallArguments().get(0).normalize(NormalizationMode.WHNF);
-              arg2 = conCall2.getDefCallArguments().get(0).normalize(NormalizationMode.WHNF);
+              arg1 = conCall1.getDefCallArguments().getFirst().normalize(NormalizationMode.WHNF);
+              arg2 = conCall2.getDefCallArguments().getFirst().normalize(NormalizationMode.WHNF);
             }
             Expression wholeExpr1 = arg1;
             Expression wholeExpr2 = arg2;
@@ -966,7 +966,7 @@ public class CompareVisitor implements ExpressionVisitor2<Expression, Expression
       if (!(expr instanceof ConCallExpression && ((ConCallExpression) expr).getDefinition() == Prelude.SUC)) {
         return expr instanceof IntegerExpression ? new Pair<>(new SmallIntegerExpression(0), ((IntegerExpression) expr).plus(sucs).getBigInteger()) : new Pair<>(expr, BigInteger.valueOf(sucs));
       }
-      expr = ((ConCallExpression) expr).getDefCallArguments().get(0);
+      expr = ((ConCallExpression) expr).getDefCallArguments().getFirst();
       expr = myNormalize ? expr.normalize(NormalizationMode.WHNF) : expr.getUnderlyingExpression();
       sucs++;
     }
@@ -980,8 +980,8 @@ public class CompareVisitor implements ExpressionVisitor2<Expression, Expression
       return myCMP != CMP.EQ;
     }
 
-    Expression arg1 = expr1.getDefCallArguments().get(0);
-    Expression arg2 = expr2.getDefCallArguments().get(0);
+    Expression arg1 = expr1.getDefCallArguments().getFirst();
+    Expression arg2 = expr2.getDefCallArguments().getFirst();
     if (myCMP == CMP.EQ) {
       return compare(correctOrder ? arg1 : arg2, correctOrder ? arg2 : arg1, ExpressionFactory.Nat(), false);
     }
@@ -1115,7 +1115,7 @@ public class CompareVisitor implements ExpressionVisitor2<Expression, Expression
       infExpr.getVariable().getBounds().removeAll(mySubstitution.keySet());
     }
     for (int i = params.size() - 1; i >= 0; i--) {
-      result = new LamExpression(PiExpression.generateUpperBound(params.get(i).getType().getSortOfType(), bodySort, myEquations, mySourceNode), params.get(i), result);
+      result = new LamExpression(PiExpression.piSort(params.get(i).getType().getSortOfType(), bodySort), params.get(i), result);
     }
     return myEquations.addEquation(correctOrder ? infExpr : result, correctOrder ? result : infExpr, null, myCMP, infExpr.getVariable().getSourceNode(), correctOrder ? infExpr.getVariable() : null, correctOrder ? null : infExpr.getVariable());
   }
@@ -1255,7 +1255,7 @@ public class CompareVisitor implements ExpressionVisitor2<Expression, Expression
         if (!myNormalCompare || !myEquations.supportsLevels()) {
           return false;
         }
-        codSort = PiExpression.generateUpperBound(params.get(i).getType().getSortOfType(), codSort, myEquations, mySourceNode);
+        codSort = PiExpression.piSort(params.get(i).getType().getSortOfType(), codSort);
         lam = new LamExpression(codSort, params.get(i), lam);
       }
 
@@ -2026,7 +2026,7 @@ public class CompareVisitor implements ExpressionVisitor2<Expression, Expression
           Expression type2 = list2.get(i).getType().normalize(NormalizationMode.WHNF);
           boolean isGE;
           if (type1 instanceof ClassCallExpression classCall1 && type2 instanceof ClassCallExpression classCall2) {
-            isGE = classCall1.getDefinition() == classCall2.getDefinition() ? classCall2.getImplementedHere().size() > classCall1.getImplementedHere().size() : ((ClassCallExpression) type2).getDefinition().isSubClassOf(((ClassCallExpression) type1).getDefinition());
+            isGE = classCall1.getDefinition() == classCall2.getDefinition() ? classCall2.getImplementedHere().size() > classCall1.getImplementedHere().size() : classCall2.getDefinition().isSubClassOf(classCall1.getDefinition());
           } else {
             isGE = type2 instanceof DataCallExpression && ((DataCallExpression) type2).getDefinition() == Prelude.FIN || type1 instanceof DataCallExpression && ((DataCallExpression) type1).getDefinition() == Prelude.NAT;
           }
@@ -2157,7 +2157,7 @@ public class CompareVisitor implements ExpressionVisitor2<Expression, Expression
       } else if (constructor2 == Prelude.ZERO) {
         return true;
       } else {
-        ok = compare(expr1.pred(), conCall2.getDefCallArguments().get(0), ExpressionFactory.Nat(), false);
+        ok = compare(expr1.pred(), conCall2.getDefCallArguments().getFirst(), ExpressionFactory.Nat(), false);
       }
     }
     if (!ok) {
